assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 126 conflicts: 9 shift/reduce
State 140 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | feature ';' feature_list

    8 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}'
    9        | OBJECTID '(' formal formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID ':' TYPEID
   11        | OBJECTID ':' TYPEID ASSIGN expr

   12 formal_list: %empty
   13            | ',' formal formal_list

   14 formal: OBJECTID ':' TYPEID

   15 expr_list_star: %empty
   16               | ',' expr expr_list_star

   17 expr_list_plus: expr ';'
   18               | expr ';' expr_list_plus

   19 expr_list_let: OBJECTID ':' TYPEID IN expr
   20              | OBJECTID ':' TYPEID ASSIGN expr IN expr
   21              | OBJECTID ':' TYPEID ',' expr_list_let
   22              | OBJECTID ':' TYPEID ASSIGN expr ',' expr_list_let

   23 expr_list_case: OBJECTID ':' TYPEID DARROW expr ';'
   24               | OBJECTID ':' TYPEID DARROW expr ';' expr_list_case

   25 expr: OBJECTID ASSIGN expr
   26     | expr '.' OBJECTID '(' ')'
   27     | expr '.' OBJECTID '(' expr expr_list_star ')'
   28     | expr '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr '@' TYPEID '.' OBJECTID '(' expr expr_list_star ')'
   30     | OBJECTID '(' ')'
   31     | OBJECTID '(' expr expr_list_star ')'
   32     | IF expr THEN expr ELSE expr FI
   33     | WHILE expr LOOP expr POOL
   34     | '{' expr_list_plus '}'
   35     | LET expr_list_let
   36     | CASE expr OF expr_list_case ESAC
   37     | NEW TYPEID
   38     | ISVOID expr
   39     | expr '+' expr
   40     | expr '-' expr
   41     | expr '*' expr
   42     | expr '/' expr
   43     | '~' expr
   44     | expr '<' expr
   45     | expr LE expr
   46     | expr '=' expr
   47     | NOT expr
   48     | '(' expr ')'
   49     | OBJECTID
   50     | INT_CONST
   51     | STR_CONST
   52     | BOOL_CONST


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 8 9 26 27 28 29 30 31 48
    ')' (41) 8 9 26 27 28 29 30 31 48
    '*' (42) 41
    '+' (43) 39
    ',' (44) 13 16 21 22
    '-' (45) 40
    '.' (46) 26 27 28 29
    '/' (47) 42
    ':' (58) 8 9 10 11 14 19 20 21 22 23 24
    ';' (59) 4 5 7 17 18 23 24
    '<' (60) 44
    '=' (61) 46
    '@' (64) 28 29
    '{' (123) 4 5 8 9 34
    '}' (125) 4 5 8 9 34
    '~' (126) 43
    error (256)
    CLASS (258) 4 5
    ELSE (259) 32
    FI (260) 32
    IF (261) 32
    IN (262) 19 20
    INHERITS (263) 5
    LET (264) 35
    LOOP (265) 33
    POOL (266) 33
    THEN (267) 32
    WHILE (268) 33
    CASE (269) 36
    ESAC (270) 36
    OF (271) 36
    DARROW (272) 23 24
    NEW (273) 37
    ISVOID (274) 38
    STR_CONST <symbol> (275) 51
    INT_CONST <symbol> (276) 50
    BOOL_CONST <boolean> (277) 52
    TYPEID <symbol> (278) 4 5 8 9 10 11 14 19 20 21 22 23 24 28 29 37
    OBJECTID <symbol> (279) 8 9 10 11 14 19 20 21 22 23 24 25 26 27 28 29 30 31 49
    ASSIGN (280) 11 20 22 25
    NOT (281) 47
    LE (282) 45
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5
        on right: 2 3
    feature_list <features> (49)
        on left: 6 7
        on right: 4 5 7
    feature <feature> (50)
        on left: 8 9 10 11
        on right: 7
    formal_list <formals> (51)
        on left: 12 13
        on right: 9 13
    formal <formal> (52)
        on left: 14
        on right: 9 13
    expr_list_star <expressions> (53)
        on left: 15 16
        on right: 16 27 29 31
    expr_list_plus <expressions> (54)
        on left: 17 18
        on right: 18 34
    expr_list_let <expression> (55)
        on left: 19 20 21 22
        on right: 21 22 35
    expr_list_case <cases> (56)
        on left: 23 24
        on right: 24 36
    expr <expression> (57)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 8 9 11 16 17 18 19 20 22 23 24 25 26 27 28 29 31 32 33 36 38 39 40 41 42 43 44 45 46 47 48


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 12
    feature       go to state 13


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 11

    8 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}'
    9        | OBJECTID . '(' formal formal_list ')' ':' TYPEID '{' expr '}'
   10        | OBJECTID . ':' TYPEID
   11        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 15
    ':'  shift, and go to state 16


State 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 17


State 13

    7 feature_list: feature . ';' feature_list

    ';'  shift, and go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 19
    feature       go to state 13


State 15

    8 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}'
    9        | OBJECTID '(' . formal formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 20
    ')'       shift, and go to state 21

    formal  go to state 22


State 16

   10 feature: OBJECTID ':' . TYPEID
   11        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 23


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 24


State 18

    7 feature_list: feature ';' . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 25
    feature       go to state 13


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 26


State 20

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 27


State 21

    8 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 28


State 22

    9 feature: OBJECTID '(' formal . formal_list ')' ':' TYPEID '{' expr '}'

    ','  shift, and go to state 29

    $default  reduce using rule 12 (formal_list)

    formal_list  go to state 30


State 23

   10 feature: OBJECTID ':' TYPEID .
   11        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 10 (feature)


State 24

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 25

    7 feature_list: feature ';' feature_list .

    $default  reduce using rule 7 (feature_list)


State 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 32


State 27

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 33


State 28

    8 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 34


State 29

   13 formal_list: ',' . formal formal_list

    OBJECTID  shift, and go to state 20

    formal  go to state 35


State 30

    9 feature: OBJECTID '(' formal formal_list . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 36


State 31

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 51


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 33

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 34

    8 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 52


State 35

   13 formal_list: ',' formal . formal_list

    ','  shift, and go to state 29

    $default  reduce using rule 12 (formal_list)

    formal_list  go to state 53


State 36

    9 feature: OBJECTID '(' formal formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 54


State 37

   32 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 55


State 38

   35 expr: LET . expr_list_let

    OBJECTID  shift, and go to state 56

    expr_list_let  go to state 57


State 39

   33 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 58


State 40

   36 expr: CASE . expr OF expr_list_case ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 59


State 41

   37 expr: NEW . TYPEID

    TYPEID  shift, and go to state 60


State 42

   38 expr: ISVOID . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 61


State 43

   51 expr: STR_CONST .

    $default  reduce using rule 51 (expr)


State 44

   50 expr: INT_CONST .

    $default  reduce using rule 50 (expr)


State 45

   52 expr: BOOL_CONST .

    $default  reduce using rule 52 (expr)


State 46

   25 expr: OBJECTID . ASSIGN expr
   30     | OBJECTID . '(' ')'
   31     | OBJECTID . '(' expr expr_list_star ')'
   49     | OBJECTID .

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 49 (expr)


State 47

   47 expr: NOT . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 64


State 48

   43 expr: '~' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 65


State 49

   34 expr: '{' . expr_list_plus '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr_list_plus  go to state 66
    expr            go to state 67


State 50

   48 expr: '(' . expr ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 68


State 51

   11 feature: OBJECTID ':' TYPEID ASSIGN expr .
   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr expr_list_star ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list_star ')'
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 11 (feature)


State 52

    8 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 78


State 53

   13 formal_list: ',' formal formal_list .

    $default  reduce using rule 13 (formal_list)


State 54

    9 feature: OBJECTID '(' formal formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 79


State 55

   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr expr_list_star ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list_star ')'
   32     | IF expr . THEN expr ELSE expr FI
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    THEN  shift, and go to state 80
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 56

   19 expr_list_let: OBJECTID . ':' TYPEID IN expr
   20              | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   21              | OBJECTID . ':' TYPEID ',' expr_list_let
   22              | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_list_let

    ':'  shift, and go to state 81


State 57

   35 expr: LET expr_list_let .

    $default  reduce using rule 35 (expr)


State 58

   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr expr_list_star ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list_star ')'
   33     | WHILE expr . LOOP expr POOL
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    LOOP  shift, and go to state 82
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 59

   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr expr_list_star ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list_star ')'
   36     | CASE expr . OF expr_list_case ESAC
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    OF   shift, and go to state 83
    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77


State 60

   37 expr: NEW TYPEID .

    $default  reduce using rule 37 (expr)


State 61

   26 expr: expr . '.' OBJECTID '(' ')'
   27     | expr . '.' OBJECTID '(' expr expr_list_star ')'
   28     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   29     | expr . '@' TYPEID '.' OBJECTID '(' expr expr_list_star ')'
   38     | ISVOID expr .
   39     | expr . '+' expr
   40     | expr . '-' expr
   41     | expr . '*' expr
   42     | expr . '/' expr
   44     | expr . '<' expr
   45     | expr . LE expr
   46     | expr . '=' expr

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 38 (expr)


State 62

   25 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 84


State 63

   30 expr: OBJECTID '(' . ')'
   31     | OBJECTID '(' . expr expr_list_star ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    ')'         shift, and go to state 85

    expr  go to state 86


State 64
